# nlp_processing_pipeline

./: README.md  __init__.py  pyproject.toml
notebooks/: example.ipynb
queries/: tweets.py
src/: data_handler.py  pipeline.py
tests/: test_data_processing_pipeline.py
